--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									<th>Chức vụ</th>									
 									<th>Tổng lương</th>
 									<th>Xếp loại</th>
-									<th><em class="fa fa-cog"></em></th>
+									<th>Chức năng</th>
 								</tr>
 							</thead>
 							<tbody id="tableDanhSach">
@@ -232,7 +232,7 @@
 									<span class="input-group-text"><i class="fa fa-envelope"></i></span>
 								</div>
 								<input type="email" name="email" id="email" class="form-control input-sm"
-									placeholder="Email">
+									placeholder="email">
 							</div>
 
 							<span class="sp-thongbao" id="tbEmail"></span>
