--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<!-- Bootstrap 4 -->
+	<!-- Bootstrap 1 -->
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 
-	<!-- JQuery UI -->
+	<!-- JQuery UI 2-->
 	<link rel="stylesheet" href="css/jquery-ui.min.css">
 
 	<!-- Animate -->
 	<!-- <link rel="stylesheet" href="css/animate.css"> -->
 
-	<!-- My CSS -->
+	<!-- My CSS 2-->
 	<link rel="stylesheet" href="css/modal.css">
 
 	<link rel="stylesheet" href="css/style4.css">
@@ -104,7 +104,7 @@
 			</nav>
 
 
-			<div class="container">
+			<div class="container">  
 				<div class="card text-center">
 					<!-- Header -->
 					<div class="card-header myCardHeader">
@@ -297,7 +297,7 @@
 							<span class="sp-thongbao" id="tbGiolam"></span>
 						</div>
 
-					</form>
+					</form> 
 				</div>
 
 				<!-- Modal footer -->
@@ -339,7 +339,8 @@
 			});
 		});
 	</script>
-	 <script type="module" src="./js/method.js"></script>
+	 <!-- <script type="module" src="./js/method.js"></script> -->
+	  <script type="module" src="./js/xuLy.js"></script>
 </body>
 
 </html>
